welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.error
FlowerPot:9: error: not enough arguments for method faireFleurs: (c: java.awt.Color)Unit.
Unspecified value parameter c.
	faireFleurs()
                   ^